--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ MYSQL_DATABASE=infonete
 MYSQL_PORT=3333
 MYSQL_USER=pw2
 MYSQL_PASSWORD=123456
-MYSQL_DATA=./mysql_data/
+MYSQL_SCRIPTS=./app/docker-scripts/sql
 
 PHP_VERSION=7.3-apache
 PHP_PORT=8888
